--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "server": "json-server --watch src/jobs.json --port 8000"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.1",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
+    "@supabase/supabase-js": "^2.55.0",
     "@tailwindcss/vite": "^4.1.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
